--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,8 +49,37 @@ jobs:
         if-no-files-found: error
         retention-days: 2
 
+  test-m1:
+    runs-on: ARM64
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          submodules: true
+      - uses: coursier/cache-action@v6.3
+      - uses: coursier/setup-action@f883d08305acbc28e5e5363bf5ec086397627021
+        with:
+          apps: ""
+          jvm: "https://github.com/graalvm/graalvm-ce-builds/releases/download/vm-22.1.0/graalvm-ce-java17-darwin-aarch64-22.1.0.tar.gz"
+      - name: Run tests
+        run: ./mill -i __.test
+      - name: Build and publish locally
+        run: ./mill -i __.publishLocal
+      - name: List published files
+        shell: bash
+        run: find ~/.ivy2/local | sort
+      - name: Copy artifacts
+        run: ./mill -i __.jniCopyFilesTo artifacts/
+      - uses: actions/upload-artifact@v2.2.4
+        with:
+          name: artifacts
+          path: artifacts/
+          if-no-files-found: error
+          retention-days: 2
+
   release:
-    needs: test
+    needs: [test,test-m1]
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
