--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,6 +13,15 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest, macos-15-intel]
+        include:
+          - os: ubuntu-latest
+            platform: linux
+          - os: windows-latest
+            platform: windows
+          - os: macos-latest
+            platform: mac-aarch64
+          - os: macos-15-intel
+            platform: mac-intel
     runs-on: ${{ matrix.os }}
     steps:
     - name: Checkout
@@ -36,9 +45,9 @@ jobs:
       run: find ~/.ivy2/local | sort
     - name: Copy artifacts
       run: ./mill -i __.jniCopyFilesTo artifacts/
-    - uses: actions/upload-artifact@v2.2.4
+    - uses: actions/upload-artifact@v6
       with:
-        name: artifacts
+        name: artifacts-${{ matrix.platform }}
         path: artifacts/
         if-no-files-found: error
         retention-days: 2
@@ -65,15 +74,15 @@ jobs:
         run: find ~/.ivy2/local | sort
       - name: Copy artifacts
         run: ./mill -i __.jniCopyFilesTo artifacts/
-      - uses: actions/upload-artifact@v2.2.4
+      - uses: actions/upload-artifact@v6
         with:
-          name: artifacts
+          name: artifacts-m1
           path: artifacts/
           if-no-files-found: error
           retention-days: 2
 
   release:
-    needs: [test,test-m1]
+    needs: test
     runs-on: ubuntu-latest
     if: github.event_name == 'push'
     steps:
@@ -89,9 +98,21 @@ jobs:
       - name: Install libsodium (Linux)
         if: runner.os == 'Linux'
         run: sudo apt-get install -y libsodium-dev
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v7
         with:
-          name: artifacts
+          name: artifacts-linux
+          path: artifacts/
+      - uses: actions/download-artifact@v7
+        with:
+          name: artifacts-windows
+          path: artifacts/
+      - uses: actions/download-artifact@v7
+        with:
+          name: artifacts-mac-intel
+          path: artifacts/
+      - uses: actions/download-artifact@v7
+        with:
+          name: artifacts-mac-aarch64
           path: artifacts/
       - run: .github/scripts/gpg-setup.sh
         shell: bash
