--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,15 @@ out/
 .metals/
 .vscode/
 .bloop/
+.idea/
+.cursor/
+.scala-build
+dest/
+target/
+
+*/scoverage.coverage
+
+# ignore vim backup files
+*.sw[op]
+.DS_Store
+
