--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,6 +36,20 @@ jobs:
     - name: Install libsodium (Linux)
       if: runner.os == 'Linux'
       run: sudo apt-get install -y libsodium-dev
+    - name: Install libsodium (macOS ARM64)
+      if: matrix.os == 'macos-latest' && matrix.platform == 'mac-aarch64'
+      run: |
+        # Install ARM64 libsodium (for ARM64 builds) - already available via system Homebrew
+        brew install libsodium
+        
+        # Install Intel Homebrew under Rosetta for x86_64 libraries
+        # This installs to /usr/local (Intel) vs /opt/homebrew (Apple Silicon)
+        if [ ! -f /usr/local/bin/brew ]; then
+          arch -x86_64 /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+        fi
+        
+        # Install libsodium via Intel Homebrew (installs x86_64 libraries to /usr/local)
+        arch -x86_64 /usr/local/bin/brew install libsodium
     - name: Run tests
       run: ./mill -i __.test
     - name: Build and publish locally
