--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,7 +58,7 @@ jobs:
       shell: bash
       run: find ~/.ivy2/local | sort
     - name: Copy artifacts
-      run: ./mill -i __.jniCopyFilesTo artifacts/
+      run: ./mill -i __.jniCopyFilesTo --dest artifacts/
     - uses: actions/upload-artifact@v6
       with:
         name: artifacts-${{ matrix.platform }}
@@ -104,7 +104,7 @@ jobs:
         env:
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
       - name: Release
-        run: ./mill -i publishSonatype __.publishArtifacts
+        run: ./mill -i publishSonatype --tasks __.publishArtifacts
         env:
           PGP_PASSWORD: ${{ secrets.PGP_PASSPHRASE }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
